--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="start_button">Start</string>
     <string name="settings_button">Settings</string>
     <string name="about_button">About</string>
+    <string name="maps_option">Maps</string>
     <string name="group_title">Group</string>
+    <string name="start_path">Start Drawing</string>
+    <string name="stop_path">Stop Drawing</string>
     <string name="group_text">Robert Morosan - 54456\nInês Fragoso - 54454\nDiogo Ferreira - 54477</string>
     <string name="background_color_changer_button">Background Color:</string>
 
@@ -15,4 +18,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Maps</string>
 </resources>
